LittleDuckParser.java
// Generated from LittleDuckParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LittleDuckParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, MAIN=2, END=3, VAR=4, INT=5, FLOAT=6, VOID=7, IF=8, ELSE=9, 
		WHILE=10, DO=11, PRINT=12, ID=13, CTE_INT=14, CTE_FLOAT=15, CTE_STRING=16, 
		PLUS=17, MINUS=18, MULT=19, DIV=20, ASSIGN=21, EQ_COMP=22, NEQ=23, LT=24, 
		GT=25, LPAREN=26, RPAREN=27, LBRACE=28, RBRACE=29, SEMICOLON=30, COMMA=31, 
		COLON=32, DOT=33, WS=34;
	public static final int
		RULE_programa = 0, RULE_dec_vars = 1, RULE_dec_var_aux = 2, RULE_lista_ids = 3, 
		RULE_tipo = 4, RULE_bloque_principal = 5, RULE_bloque = 6, RULE_estatuto = 7, 
		RULE_asignacion = 8, RULE_escritura = 9, RULE_print_args = 10, RULE_condicion = 11, 
		RULE_ciclo_w = 12, RULE_ciclo_do_w = 13, RULE_expresion = 14, RULE_exp_comp = 15, 
		RULE_exp_arit = 16, RULE_termino = 17, RULE_factor = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "dec_vars", "dec_var_aux", "lista_ids", "tipo", "bloque_principal", 
			"bloque", "estatuto", "asignacion", "escritura", "print_args", "condicion", 
			"ciclo_w", "ciclo_do_w", "expresion", "exp_comp", "exp_arit", "termino", 
			"factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'main'", "'end'", "'var'", "'int'", "'float'", "'void'", 
			"'if'", "'else'", "'while'", "'do'", "'print'", null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", "'<'", "'>'", "'('", 
			"')'", "'{'", "'}'", "';'", "','", "':'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "MAIN", "END", "VAR", "INT", "FLOAT", "VOID", "IF", 
			"ELSE", "WHILE", "DO", "PRINT", "ID", "CTE_INT", "CTE_FLOAT", "CTE_STRING", 
			"PLUS", "MINUS", "MULT", "DIV", "ASSIGN", "EQ_COMP", "NEQ", "LT", "GT", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMICOLON", "COMMA", "COLON", 
			"DOT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LittleDuckParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LittleDuckParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(LittleDuckParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(LittleDuckParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(LittleDuckParser.SEMICOLON, 0); }
		public Bloque_principalContext bloque_principal() {
			return getRuleContext(Bloque_principalContext.class,0);
		}
		public TerminalNode END() { return getToken(LittleDuckParser.END, 0); }
		public TerminalNode DOT() { return getToken(LittleDuckParser.DOT, 0); }
		public Dec_varsContext dec_vars() {
			return getRuleContext(Dec_varsContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(PROGRAM);
			setState(39);
			match(ID);
			setState(40);
			match(SEMICOLON);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(41);
				dec_vars();
				}
			}

			setState(44);
			bloque_principal();
			setState(45);
			match(END);
			setState(46);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_varsContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(LittleDuckParser.VAR, 0); }
		public List<Dec_var_auxContext> dec_var_aux() {
			return getRuleContexts(Dec_var_auxContext.class);
		}
		public Dec_var_auxContext dec_var_aux(int i) {
			return getRuleContext(Dec_var_auxContext.class,i);
		}
		public Dec_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterDec_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitDec_vars(this);
		}
	}

	public final Dec_varsContext dec_vars() throws RecognitionException {
		Dec_varsContext _localctx = new Dec_varsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dec_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(VAR);
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				dec_var_aux();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_var_auxContext extends ParserRuleContext {
		public Lista_idsContext lista_ids() {
			return getRuleContext(Lista_idsContext.class,0);
		}
		public TerminalNode COLON() { return getToken(LittleDuckParser.COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LittleDuckParser.SEMICOLON, 0); }
		public Dec_var_auxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_var_aux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterDec_var_aux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitDec_var_aux(this);
		}
	}

	public final Dec_var_auxContext dec_var_aux() throws RecognitionException {
		Dec_var_auxContext _localctx = new Dec_var_auxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_var_aux);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			lista_ids();
			setState(55);
			match(COLON);
			setState(56);
			tipo();
			setState(57);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_idsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LittleDuckParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LittleDuckParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LittleDuckParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LittleDuckParser.COMMA, i);
		}
		public Lista_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterLista_ids(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitLista_ids(this);
		}
	}

	public final Lista_idsContext lista_ids() throws RecognitionException {
		Lista_idsContext _localctx = new Lista_idsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lista_ids);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ID);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(60);
				match(COMMA);
				setState(61);
				match(ID);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(LittleDuckParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(LittleDuckParser.FLOAT, 0); }
		public TerminalNode VOID() { return getToken(LittleDuckParser.VOID, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 224L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_principalContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(LittleDuckParser.MAIN, 0); }
		public TerminalNode LPAREN() { return getToken(LittleDuckParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LittleDuckParser.RPAREN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Bloque_principalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_principal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterBloque_principal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitBloque_principal(this);
		}
	}

	public final Bloque_principalContext bloque_principal() throws RecognitionException {
		Bloque_principalContext _localctx = new Bloque_principalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bloque_principal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(MAIN);
			setState(70);
			match(LPAREN);
			setState(71);
			match(RPAREN);
			setState(72);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(LittleDuckParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LittleDuckParser.RBRACE, 0); }
		public List<EstatutoContext> estatuto() {
			return getRuleContexts(EstatutoContext.class);
		}
		public EstatutoContext estatuto(int i) {
			return getRuleContext(EstatutoContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitBloque(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(LBRACE);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15616L) != 0)) {
				{
				{
				setState(75);
				estatuto();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstatutoContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public Ciclo_wContext ciclo_w() {
			return getRuleContext(Ciclo_wContext.class,0);
		}
		public Ciclo_do_wContext ciclo_do_w() {
			return getRuleContext(Ciclo_do_wContext.class,0);
		}
		public EscrituraContext escritura() {
			return getRuleContext(EscrituraContext.class,0);
		}
		public EstatutoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estatuto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterEstatuto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitEstatuto(this);
		}
	}

	public final EstatutoContext estatuto() throws RecognitionException {
		EstatutoContext _localctx = new EstatutoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_estatuto);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				asignacion();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				condicion();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				ciclo_w();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				ciclo_do_w();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				escritura();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LittleDuckParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LittleDuckParser.ASSIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LittleDuckParser.SEMICOLON, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitAsignacion(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(ID);
			setState(91);
			match(ASSIGN);
			setState(92);
			expresion();
			setState(93);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscrituraContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(LittleDuckParser.PRINT, 0); }
		public TerminalNode LPAREN() { return getToken(LittleDuckParser.LPAREN, 0); }
		public Print_argsContext print_args() {
			return getRuleContext(Print_argsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LittleDuckParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(LittleDuckParser.SEMICOLON, 0); }
		public EscrituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escritura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterEscritura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitEscritura(this);
		}
	}

	public final EscrituraContext escritura() throws RecognitionException {
		EscrituraContext _localctx = new EscrituraContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_escritura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(PRINT);
			setState(96);
			match(LPAREN);
			setState(97);
			print_args();
			setState(98);
			match(RPAREN);
			setState(99);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_argsContext extends ParserRuleContext {
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LittleDuckParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LittleDuckParser.COMMA, i);
		}
		public List<TerminalNode> CTE_STRING() { return getTokens(LittleDuckParser.CTE_STRING); }
		public TerminalNode CTE_STRING(int i) {
			return getToken(LittleDuckParser.CTE_STRING, i);
		}
		public Print_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterPrint_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitPrint_args(this);
		}
	}

	public final Print_argsContext print_args() throws RecognitionException {
		Print_argsContext _localctx = new Print_argsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_print_args);
		int _la;
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case CTE_INT:
			case CTE_FLOAT:
			case PLUS:
			case MINUS:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				expresion();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(102);
					match(COMMA);
					setState(103);
					expresion();
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case CTE_STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(CTE_STRING);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(110);
					match(COMMA);
					setState(113);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
					case CTE_INT:
					case CTE_FLOAT:
					case PLUS:
					case MINUS:
					case LPAREN:
						{
						setState(111);
						expresion();
						}
						break;
					case CTE_STRING:
						{
						setState(112);
						match(CTE_STRING);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(LittleDuckParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(LittleDuckParser.LPAREN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LittleDuckParser.RPAREN, 0); }
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(LittleDuckParser.ELSE, 0); }
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterCondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitCondicion(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(IF);
			setState(123);
			match(LPAREN);
			setState(124);
			expresion();
			setState(125);
			match(RPAREN);
			setState(126);
			bloque();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(127);
				match(ELSE);
				setState(128);
				bloque();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ciclo_wContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(LittleDuckParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(LittleDuckParser.LPAREN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LittleDuckParser.RPAREN, 0); }
		public TerminalNode DO() { return getToken(LittleDuckParser.DO, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Ciclo_wContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ciclo_w; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterCiclo_w(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitCiclo_w(this);
		}
	}

	public final Ciclo_wContext ciclo_w() throws RecognitionException {
		Ciclo_wContext _localctx = new Ciclo_wContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ciclo_w);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(WHILE);
			setState(132);
			match(LPAREN);
			setState(133);
			expresion();
			setState(134);
			match(RPAREN);
			setState(135);
			match(DO);
			setState(136);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ciclo_do_wContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(LittleDuckParser.DO, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(LittleDuckParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(LittleDuckParser.LPAREN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LittleDuckParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(LittleDuckParser.SEMICOLON, 0); }
		public Ciclo_do_wContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ciclo_do_w; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).enterCiclo_do_w(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LittleDuckParserListener ) ((LittleDuckParserListener)listener).exitCiclo_do_w(this);
		}
	}
